@@ -1,3 +1,7 @@
+2012-08-03  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* mktexfmt.c, mktexpk.c, mktextfm.c: Replace P_WAIT by _P_WAIT.
+
 2012-04-09  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am (AM_CPPFLAGS): Define WEB2C_KPSE_VERSION.
